# advent_of_code

./: .gitignore  .hgignore  README-template.adoc  README-template.md  README.adoc  README.md
2017/: session.sh
2018/: new_challenge.py  session.sh
2019/: new_challenge.py  session.sh
2020/: Cargo.toml
2021/: Cargo.toml
2021/src/: a01_sonar_sweep.rs  a02_dive.rs  a03_binary_diagnostic.rs  a04_giant_squid.rs  a05_hydrothermal_venture.rs  a06_lanternfish.rs  a07_the_treachery_of_whales.rs  a08_seven_segment_search.rs  a09_smoke_basin.rs  a10_syntax_scoring.rs  a11_dumbo_octopus.rs  a12_passage_pathing.rs  a13_transparent_origami.rs  a14_extended_polymerization.rs  a15_chiton.py  a15_chiton.rs  a17_trick_shot.rs  a21_dirac_dice.rs  helpers.rs  main.rs  test_a15_chiton.py
2021/src/a01_sonar_sweep/: challenge.txt
2021/src/a02_dive/: challenge.txt
2021/src/a03_binary_diagnostic/: challenge.txt
2021/src/a04_giant_squid/: challenge.txt
2021/src/a05_hydrothermal_venture/: challenge.txt
2021/src/a06_lanternfish/: challenge.txt
2021/src/a07_the_treachery_of_whales/: challenge.txt
2021/src/a08_seven_segment_search/: challenge.txt  patterns.txt
2021/src/a09_smoke_basin/: challenge.txt
2021/src/a10_syntax_scoring/: challenge.txt
2021/src/a11_dumbo_octopus/: challenge.txt
2021/src/a13_transparent_origami/: challenge.txt
2021/src/a14_extended_polymerization/: challenge.txt
2021/src/a15_chiton/: challenge.txt
2021/src/a17_trick_shot/: challenge.txt
2021/src/a21_dirac_dice/: challenge.txt
2022/: README.adoc
2023/: README.adoc
2025/: README.adoc
(+310 files in other folders)
