[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Frank Schmitt <frankschmitt@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cute = "0.3.0"
ndarray = "0.15.4"
regex = "1.5.4"
petgraph = "0.6.0"
itertools = "0.10.3"
